--- a/src/view/CentroPokemon.fxml
+++ b/src/view/CentroPokemon.fxml
@@ -46,68 +46,92 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-            <ImageView fx:id="btnCurarPokemon" fitHeight="611.0" fitWidth="642.0" layoutX="1.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
+        <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" text="Drag components from Library here…" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+          <font>
+            <Font size="18.0" />
+          </font>
+        </Label>
+            <ImageView fx:id="btnCurarPokemon" fitHeight="690.0" fitWidth="844.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../imagenes/centroPokemon.png" />
+                  <Image url="@../imagenes/fondo/fondo_centroPokemon.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="btnCurarPokemons" fitHeight="57.0" fitWidth="300.0" layoutX="10.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <ProgressBar fx:id="bar6" layoutX="463.0" layoutY="497.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar1" layoutX="48.0" layoutY="206.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar5" layoutX="55.0" layoutY="497.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar3" layoutX="55.0" layoutY="348.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar4" layoutX="463.0" layoutY="348.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar2" layoutX="463.0" layoutY="206.0" prefWidth="200.0" progress="0.0" />
+            <ImageView fitHeight="68.0" fitWidth="157.0" layoutX="273.0" layoutY="564.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../imagenes/imgCentroPokemon.png" />
+                  <Image url="@../imagenes/boton/imgCurarPokemons.png" />
                </image>
             </ImageView>
-            <ProgressBar fx:id="bar6" layoutX="386.0" layoutY="456.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar1" layoutX="27.0" layoutY="201.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar5" layoutX="27.0" layoutY="456.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar3" layoutX="27.0" layoutY="331.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar4" layoutX="390.0" layoutY="332.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar2" layoutX="386.0" layoutY="201.0" prefWidth="200.0" progress="0.0" />
-            <ImageView fitHeight="68.0" fitWidth="98.0" layoutX="521.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="86.0" fitWidth="143.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../imagenes/menu/centroPokemon.png" />
+                  <Image url="@../imagenes/boton/imgCentroPokemon.png" />
                </image>
             </ImageView>
-            <Button fx:id="btnCurarPokemons" layoutX="252.0" layoutY="501.0" mnemonicParsing="false" onAction="#curarPokemons" prefHeight="44.0" prefWidth="107.0" style="-fx-background-color: #ff5b5d; -fx-background-radius: 25px; -fx-border-radius: 25px;" text="Curar Pokemons" textFill="WHITE">
+            <ImageView fx:id="pkm6" fitHeight="150.0" fitWidth="200.0" layoutX="488.0" layoutY="358.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/39.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm5" fitHeight="150.0" fitWidth="200.0" layoutX="82.0" layoutY="358.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/39.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm4" fitHeight="150.0" fitWidth="200.0" layoutX="488.0" layoutY="213.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/39.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm3" fitHeight="150.0" fitWidth="200.0" layoutX="82.0" layoutY="213.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/39.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm2" fitHeight="150.0" fitWidth="200.0" layoutX="488.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/39.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm1" fitHeight="150.0" fitWidth="200.0" layoutX="82.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/39.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="pkmlbl1" layoutX="136.0" layoutY="181.0" text="Label">
                <font>
-                  <Font name="Monospaced Regular" size="24.0" />
+                  <Font name="Yu Gothic Regular" size="16.0" />
                </font>
-            </Button>
-            <ImageView fitHeight="51.0" fitWidth="137.0" layoutX="252.0" layoutY="498.0" onDragDetected="#curarPokemons" onMouseClicked="#curarPokemons" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../imagenes/imgCurarPokemons.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="pkm1" fitHeight="148.0" fitWidth="134.0" layoutX="60.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../imagenes/Pokemon/Front/10.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="pkm2" fitHeight="148.0" fitWidth="134.0" layoutX="419.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../imagenes/Pokemon/Front/10.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="pkm3" fitHeight="148.0" fitWidth="134.0" layoutX="60.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../imagenes/Pokemon/Front/10.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="pkm4" fitHeight="148.0" fitWidth="134.0" layoutX="423.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../imagenes/Pokemon/Front/10.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="pkm5" fitHeight="148.0" fitWidth="134.0" layoutX="60.0" layoutY="349.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../imagenes/Pokemon/Front/10.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="pkm6" fitHeight="148.0" fitWidth="134.0" layoutX="423.0" layoutY="349.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../imagenes/Pokemon/Front/10.png" />
-               </image>
-            </ImageView>
-            <Button id="btnSalir" fx:id="btnSalir" layoutX="520.0" layoutY="556.0" mnemonicParsing="false" onAction="#salir" style="-fx-effect: innershadow(gaussian, rgba(0,0,0,0.5), 10, 0.5, 0, 0);" text="Salir">
+            </Label>
+            <Label fx:id="pkmlbl2" layoutX="542.0" layoutY="181.0" text="Label">
+               <font>
+                  <Font name="Yu Gothic Regular" size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="pkmlbl3" layoutX="136.0" layoutY="328.0" text="Label">
+               <font>
+                  <Font name="Yu Gothic Regular" size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="pkmlbl4" layoutX="542.0" layoutY="328.0" text="Label">
+               <font>
+                  <Font name="Yu Gothic Regular" size="16.0" />
+               </font>
+            </Label>
+            <Label fx:id="pkmlbl5" layoutX="136.0" layoutY="472.0" text="Label">
+               <font>
+                  <Font name="Yu Gothic Regular" size="16.0" />
+               </font></Label>
+            <Label fx:id="pkmlbl6" layoutX="542.0" layoutY="472.0" text="Label">
+               <font>
+                  <Font name="Yu Gothic Regular" size="16.0" />
+               </font>
+            </Label>
+            <Button id="btnSalir" fx:id="btnSalir" layoutX="599.0" layoutY="637.0" mnemonicParsing="false" onAction="#salir" text="Salir">
                <font>
                   <Font name="Lucida Console" size="18.0" />
                </font>
@@ -115,35 +139,6 @@
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
-            <Label fx:id="lbl1" layoutX="112.0" layoutY="181.0" text="Label">
-               <font>
-                  <Font name="MingLiU-ExtB" size="12.0" />
-               </font>
-            </Label>
-            <Label fx:id="lbl2" layoutX="475.0" layoutY="181.0" text="Label">
-               <font>
-                  <Font name="MingLiU-ExtB" size="12.0" />
-               </font></Label>
-            <Label fx:id="lbl3" layoutX="112.0" layoutY="308.0" text="Label">
-               <font>
-                  <Font name="MingLiU-ExtB" size="12.0" />
-               </font>
-            </Label>
-            <Label fx:id="lbl4" layoutX="475.0" layoutY="308.0" text="Label">
-               <font>
-                  <Font name="MingLiU-ExtB" size="12.0" />
-               </font>
-            </Label>
-            <Label fx:id="lbl5" layoutX="112.0" layoutY="439.0" text="Label">
-               <font>
-                  <Font name="MingLiU-ExtB" size="12.0" />
-               </font>
-            </Label>
-            <Label fx:id="lbl6" layoutX="475.0" layoutY="439.0" text="Label">
-               <font>
-                  <Font name="MingLiU-ExtB" size="12.0" />
-               </font>
-            </Label>
       </children>
     </AnchorPane>
   </children>
