--- a/src/view/captura.fxml
+++ b/src/view/captura.fxml
@@ -46,24 +46,23 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
+        <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" text="Drag components from Library here…" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
+          <font>
+            <Font size="18.0" />
+          </font>
+        </Label>
             <ImageView fitHeight="506.0" fitWidth="778.0" layoutY="-9.0">
                <image>
                   <Image url="@../imagenes/fondo/fondo_captura.png" />
                </image>
             </ImageView>
-            <Label fx:id="lblPokemonGenerado" layoutX="261.0" layoutY="337.0" prefHeight="15.0" prefWidth="241.0" text="                     Catherpie">
-               <font>
-                  <Font name="Verdana Bold" size="12.0" />
-               </font></Label>
+            <Label fx:id="lblPokemonGenerado" layoutX="357.0" layoutY="328.0" text="Catherpie" />
             <ImageView fx:id="pokeball" fitHeight="48.0" fitWidth="47.0" layoutX="358.0" layoutY="369.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../imagenes/otros/pokeball.png" />
                </image>
             </ImageView>
-            <Text layoutX="262.0" layoutY="396.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NºPokeballs">
-               <font>
-                  <Font name="Verdana Bold" size="12.0" />
-               </font></Text>
+            <Text layoutX="273.0" layoutY="397.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NºPokepollas:" />
             <Button id="btnSalir" fx:id="btnSalir" layoutX="673.0" layoutY="448.0" mnemonicParsing="false" onAction="#salir" onMouseDragEntered="#btnSalirEntered" onMouseDragExited="#btnSalirSalir" style="-fx-effect: innershadow(gaussian, rgba(0,0,0,0.5), 10, 0.5, 0, 0);" text="Salir">
                <font>
                   <Font name="Lucida Console" size="18.0" />
@@ -88,12 +87,13 @@
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </ImageView>
-            <ImageView fx:id="imgPokemonGenerado" fitHeight="265.0" fitWidth="273.0" layoutX="249.0" layoutY="127.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="imgPokemonGenerado" fitHeight="265.0" fitWidth="273.0" layoutX="254.0" layoutY="127.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/10.png" />
+               </image>
+            </ImageView>
             <Text layoutX="420.0" layoutY="397.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X" />
-            <Label fx:id="numPokeballs" layoutX="442.0" layoutY="384.0" text="Label">
-               <font>
-                  <Font name="Verdana Bold" size="12.0" />
-               </font></Label>
+            <Label fx:id="numPokeballs" layoutX="442.0" layoutY="384.0" text="Label" />
             <ImageView fitHeight="60.0" fitWidth="78.0" layoutX="596.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../imagenes/Pokemon/gifDragonite.gif" />
@@ -129,11 +129,6 @@
                   <Image url="@../imagenes/Pokemon/gifSquirtle.gif" />
                </image>
             </ImageView>
-            <Label fx:id="lblResultado" layoutX="246.0" layoutY="148.0" prefHeight="39.0" prefWidth="271.0" textAlignment="CENTER">
-               <font>
-                  <Font name="Verdana Bold" size="12.0" />
-               </font>
-            </Label>
       </children>
     </AnchorPane>
   </children>
