--- a/bin/view/captura.fxml
+++ b/bin/view/captura.fxml
@@ -129,6 +129,11 @@
                   <Image url="@../imagenes/Pokemon/gifSquirtle.gif" />
                </image>
             </ImageView>
+            <Label fx:id="lblResultado" layoutX="279.0" layoutY="161.0" prefHeight="39.0" prefWidth="234.0">
+               <font>
+                  <Font name="Verdana Bold" size="12.0" />
+               </font>
+            </Label>
       </children>
     </AnchorPane>
   </children>
